infra/k8s-dev/backend.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamlabs-backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamlabs-backend
  template:
    metadata:
      labels:
        app: dreamlabs-backend
    spec:
      containers:
        - name: dreamlabs-backend
          image: vlad246/dreamlabs-backend:latest
          volumeMounts:
            - name: dreamlabs-db-volume
              mountPath: /app/uploads
      volumes:
        - name: dreamlabs-db-volume
          hostPath:
            path: /data/uploads
            type: DirectoryOrCreate
