infra/k8s-dev/postgres.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounting-db
  template:
    metadata:
      labels:
        app: accounting-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
