infra/k8s-dev/backend.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamlabs-srv
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: dreamlabs-backend
