infra/k8s-dev/postgres.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting-db-srv
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: accounting-db
